--- a/installConfig/gaiandb_config.properties
+++ b/installConfig/gaiandb_config.properties
@@ -98,11 +98,11 @@ DISCOVERY_IP=230.255.255.255
 
 MULTICAST_INTERFACES=ALL
 
-#MULTICAST_INTERFACES=192.168.0.1, 9.20.225.222
+#MULTICAST_INTERFACES=192.168.0.1
 
 # Gateways for discovery into separate subnets - (gateways will forward on connection requests within their own subnets)
 
-#DISCOVERY_GATEWAYS=9.20.225.73, 9.20.24.15, 9.59.230.203
+#DISCOVERY_GATEWAYS=<CSV LIST OF IP ADDRESSES>
 
 # GAIAN_CONNECTIONS_CHECKER_HEARTBEAT_MS is the amount of time between periodic connection verification requests sent to connected nodes.
 # It is also the maximum expected amount of time to receive responses to these requests from the connected nodes. The default is shown below.
